Prevent endNode from being a double